Add buffer tooltip

--- a/Assets/StreamingAssets/mod/native/lang/zh/text_event.txt
+++ b/Assets/StreamingAssets/mod/native/lang/zh/text_event.txt
@@ -1,3 +1,9 @@
+YUSHUI_STOP_TITLE:{0}雨水充沛结束
+YUSHUI_STOP_DESC:{0}降水结束，庄稼恢复普通的长势。
+YUSHUI_STOP_OPTION_1_DESC:确认
+YUSHUI_START_TITLE:{0}雨水充沛
+YUSHUI_START_DESC:{0}今年雨水连绵，庄稼长势喜人，这是丰收的兆头！
+YUSHUI_START_OPTION_1_DESC:确认
 EVENT_COLLECT_TAX_START_OPTION_1_DESC:宽松的税收（预计收入{0}）
 EVENT_COLLECT_TAX_START_OPTION_2_DESC:正常的税收（预计收入{0}）
 EVENT_COLLECT_TAX_START_OPTION_3_DESC:严格的税收（预计收入{0}）
