--- a/Assets/StreamingAssets/mod/native/lang/zh/text_event.txt
+++ b/Assets/StreamingAssets/mod/native/lang/zh/text_event.txt
@@ -1,3 +1,24 @@
+CROP_HARVEST_LESS_TITLE:{0}歉收
+CROP_HARVEST_LESS_DESC:{0}今年秋季很多的耕地产出大减，到下一年秋收之前，人们只能削减口粮应对。
+CROP_HARVEST_LESS_OPTION_1_DESC:确认
+CROP_HARVEST_NULL_TITLE:{0}绝收
+CROP_HARVEST_NULL_DESC:{0}今年秋季大量的耕地产出十不存一，基本上属于绝收，到下一年秋收之前，人们只能靠着往年的积蓄度日。
+CROP_HARVEST_NULL_OPTION_1_DESC:确认
+HUANGZAI_STOP_TITLE:{0}蝗灾结束了
+HUANGZAI_STOP_DESC:蝗虫终于从{0}飞走了，留下了一片片光秃秃的耕地...
+HUANGZAI_STOP_OPTION_1_DESC:确认
+HUANGZAI_START_TITLE:{0}发生蝗灾
+HUANGZAI_START_DESC:遮天蔽日的蝗虫飞入{0}，啃食着庄稼，{0}今年秋天很有可能会绝收...
+HUANGZAI_START_OPTION_1_DESC:确认
+CROP_HARVEST_NORMAL_TITLE:{0}普通的收获
+CROP_HARVEST_NORMAL_DESC:{0}秋收结果普通
+CROP_HARVEST_NORMAL_OPTION_1_DESC:{0}确认
+CROP_HARVEST_START_TITLE:{0}秋收开始
+CROP_HARVEST_START_DESC:{0}秋收开始
+CROP_HARVEST_START_OPTION_1_DESC:确认
+CROP_SOWING_TITLE:{0}春耕开始
+CROP_SOWING_DESC:{0}春耕开始
+CROP_SOWING_OPTION_1:确认
 YUSHUI_STOP_TITLE:{0}雨水充沛结束
 YUSHUI_STOP_DESC:{0}降水结束，庄稼恢复普通的长势。
 YUSHUI_STOP_OPTION_1_DESC:确认
