--- a/Assets/StreamingAssets/mod/native/lang/zh/text_event.txt
+++ b/Assets/StreamingAssets/mod/native/lang/zh/text_event.txt
@@ -1,3 +1,13 @@
+TASK_COLLECT_TAX_FINISH_TITLE:年度秋赋收缴完毕
+TASK_COLLECT_TAX_FINISH_DESC:本年度实际收缴秋赋{0}
+TASK_COLLECT_TAX_FINISH_OPTION_1_DESC:确认
+TASK_COLLECT_TAX_START_TITLE:秋赋征收开始
+TASK_COLLECT_TAX_START_DESC:一年一度的秋赋征收开始了，请选择本年度的征收规模，征收越严格，则收到的税收越多，但是民生影响越大，反之，征收越宽松，则收到的税收越少，而民生影响越小，
+TASK_COLLECT_TAX_START_OPTION_1:极其宽松的税收（预计税额{0}）
+TASK_COLLECT_TAX_START_OPTION_2:宽松的税收（预计税额{0}）
+TASK_COLLECT_TAX_START_OPTION_3:正常的税收（预计税额{0}）
+TASK_COLLECT_TAX_START_OPTION_4:严格的税收（预计税额{0}）
+TASK_COLLECT_TAX_START_OPTION_5:极其严格的税收（预计税额{0}）
 CROP_HARVEST_LESS_TITLE:{0}歉收
 CROP_HARVEST_LESS_DESC:{0}今年秋季很多的耕地产出大减，到下一年秋收之前，人们只能削减口粮应对。
 CROP_HARVEST_LESS_OPTION_1_DESC:确认
