--- a/Assets/StreamingAssets/mod/native/lang/zh/text_event.txt
+++ b/Assets/StreamingAssets/mod/native/lang/zh/text_event.txt
@@ -1,3 +1,18 @@
+CHAOTING_POWER_PARTY_DISAGREE_SCORE_BAD_TITLE:朝廷执政派系修改了你的考评结果
+CHAOTING_POWER_PARTY_DISAGREE_SCORE_BAD_DESC:朝廷执政派是你的同党，他们系找了种种借口，修改了你的考评结果，将考评接口由 下 修改为 中，你躲过了惩处。不过此次徇私舞弊将影响朝廷的威信...
+CHAOTING_POWER_PARTY_DISAGREE_SCORE_BAD_OPTION_1_DESC:确认
+CHAOTING_CALC_TAISHOU_SCORE_BAD_TITLE:考评结果公布
+CHAOTING_CALC_TAISHOU_SCORE_BAD_DESC:你今年的考评结等级为 下， 按律会被被朝廷惩处。不过，若当前朝廷的执政是你的同党，则他们很有可能干涉这次考评...
+CHAOTING_CALC_TAISHOU_SCORE_BAD_OPTION_1_DESC:确认
+CHAOTING_CALC_TAISHOU_SCORE_START_TITLE:年度考核开始
+CHAOTING_CALC_TAISHOU_SCORE_START_DESC:朝廷根据你今年税收完成情况和户籍人口上报情况对你的工作进行考核
+CHAOTING_CALC_TAISHOU_SCORE_START_OPTION_1_DESC:确认
+REPORT_CHAOTING_POP_AND_TAX_TITLE:编制户册上缴国税
+REPORT_CHAOTING_POP_AND_TAX_DESC:请编制今年的户册并根据户籍人口数上缴国税，户籍人口越多则上交国税越多，而且来年朝廷预定的国税越重。但是户籍人口减少，则朝廷可能认为你能力不足，不再适合担任太守职务...
+REPORT_CHAOTING_POP_AND_TAX_OPTION_1_DESC:稍低于去年
+REPORT_CHAOTING_POP_AND_TAX_OPTION_2_DESC:和去年持平
+REPORT_CHAOTING_POP_AND_TAX_OPTION_3_DESC:稍高于去年
+REPORT_CHAOTING_POP_AND_TAX_OPTION_4_DESC:按实际情况
 TASK_COLLECT_TAX_FINISH_TITLE:年度秋赋收缴完毕
 TASK_COLLECT_TAX_FINISH_DESC:本年度实际收缴秋赋{0}
 TASK_COLLECT_TAX_FINISH_OPTION_1_DESC:确认
