--- a/Assets/StreamingAssets/mod/native/lang/zh/text_tooltip.txt
+++ b/Assets/StreamingAssets/mod/native/lang/zh/text_tooltip.txt
@@ -1,3 +1,5 @@
+TAISHOU_YEAR_SCORE:太守年度考评结果 {0}
+CHAOTING_PRESTIGE_CHANGED:朝廷威信{0:+#;-#;+0}
 DEPART_BUFFER_VAILD:{0} 新增状态 {1}
 DEPART_BUFFER_INVAILD:{0} 移除状态 {1}
 ECONOMY_CHANGED:钱粮{0:+#;-#;+0}
